Добавил описание проекта

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<meta content="BEM Name Generator" name="title" />
 		<meta content="An application that greatly simplifies the creation of BEM-based class names" />
 		<meta content="website" property="og:type" />
-		<meta content="" property="og:url" />
+		<meta content="https://nameasy.github.io/bem-name-generator/" property="og:url" />
 		<meta content="BEM Name Generator" property="og:title" />
 		<meta content="A mini-application to help you easily find the initial value of the CSS properties you need" property="og:description" />
 		<meta content="summary_large_image" property="twitter:card" />
-		<meta content="" property="twitter:url" />
+		<meta content="https://nameasy.github.io/bem-name-generator/" property="twitter:url" />
 		<meta content="BEM Name Generator" property="twitter:title" />
 		<meta content="A mini-application to help you easily find the initial value of the CSS properties you need" property="twitter:description" />
 		<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Syne:wght@400..800&display=swap" rel="stylesheet" />
