--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="page">
 			<main class="main">
 				<section class="section">
-					<h1 class="section__title">BEM Name Generator</h1>
+					<h1 class="visually-hidden">BEM Name Generator</h1>
 					<form class="form section__form">
 						<fieldset class="form__fieldset">
 							<legend class="visually-hidden"></legend>
@@ -81,7 +81,7 @@
 				</div>
 			</main>
 			<footer class="footer">
-				<div class="footer__text">Project by <a class="link" href="http://mywonderful.website/">Stepan Lyubavtsev</a></div>
+				<div class="footer__text">Project by <a class="link" href="https://lyubavtsev.ru/">Stepan Lyubavtsev</a></div>
 			</footer>
 		</div>
 	</body>
